Cambios Maxisave Productos y Servicios

--- a/products-services.html
+++ b/products-services.html
@@ -6,8 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="description" content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
-    
+    <meta name="description"
+        content="Empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.">
+
 
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
@@ -170,49 +171,47 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-3 col-xs-12">
-                    <div class="solution_tabs">
-                        <h3>All Solution</h3>
-                        <ul>
-                            <li><a href="solution_industry.html">Chemical Research</a></li>
-                            <li class="active"><a href="solution_industry.html">Agricultural Processing</a></li>
-                            <li><a href="solution_industry.html">Oil industry</a></li>
-                            <li><a href="solution_industry.html">Mechanical Engineering</a></li>
-                            <li><a href="solution_industry.html">Petroleum and Gas</a></li>
-                            <li><a href="solution_industry.html">Power and Energy</a></li>
-                        </ul>
-                    </div>
                     <div class="footer_1_contact">
-                        <h3>Get in Touch</h3>
-                        <p><i class="icon-telephone114"></i>+1(123) 456 7890 - 1</p>
+                        <h3>Ponte en contacto</h3>
+                        <p><i class="icon-telephone114"></i>+01(52) 55 5236 1203</p>
                         <br>
-                        <p><i class=" icon-icons142"></i>hello@copious.com</p>
+                        <p><i class=" icon-icons142"></i>contacto@adimex.com.mx</p>
                         <br>
-                        <p><i class="icon-icons20"></i>Mon to Fri - 08:00 to 16:30</p>
+                        <p><i class="icon-icons20"></i>Lunes a Sábado - 08:00 to 16:30</p>
                         <br>
-                        <i class="icon-icons74"></i>
-                        <p>Manhattan Hall, Lacasa Ave Melb
-                            <br>ourne,124BP Australia</p>
+                        <p><i class="icon-icons74"></i>
+                            De Los Pelícanos 04,
+                            <br>Las Alamedas, Ciudad López Mateos, Méx</p>
                     </div>
                     <div class="brochure">
-                        <h3>Brochures</h3>
-                        <p>View our 2016 financial prospectus brochure for an easy to read guide on all of the services
-                            offer.</p>
-                        <a href="#"><i class="icon-document-file-gif"></i> Download Brochures</a>
+                        <h3>Catálogo</h3>
+                        <p>Descarga nuestro catálogo 2019 con nuestros últimos productos y servicios.</p>
+                        <a href="#"><i class="icon-document-file-gif"></i> Descargar</a>
                     </div>
                 </div>
                 <div class="col-md-9 col-sm-9 col-xs-12">
                     <div class="row">
                         <div class="col-md-7 col-sm-7 col-xs-12">
                             <div class="project_details_text">
-                                <p class="italic">Copious is WP Aliquam ultrices venenatis mauris. Vestibulum ante ipsum
-                                    primis in that faucibus orci luctus et.</p>
-                                <p class="p-b-30">Vestibulum ante ipsum primis in industry, logistics, finance, business
-                                    orci ultrices venenatis mauris.</p>
-                                <p class="p-b-30">Aliquam ultrices venenatis mauris. Vestibulum ante ipsum primis in
-                                    industry, logistics, finance, business orci ultrices venenatis mauris. Aliquam
-                                    ultrices primis in industry, logistics, finance, business orci Aliquam ultrices.
-                                    Aliquam ultrices venenatis mauris. Vestibulum ante ipsum primis in industry,
-                                    logistics, finance, business orci ultrices venenatis mauris.</p>
+                                <h2>Recubrimiento Reusable Maxi-Save ®</h2>
+                                <br>
+                                <p class="p-b-30">
+                                    Los procesos químicos, petroquímicos, alimenticios, textiles, etc. que implican el
+                                    almacenamiento y traslado de fluidos o reacciones a temperatura distinta al
+                                    ambiente,
+                                    precisan necesariamente aislamientos térmicos. Estos proporcionan las condiciones
+                                    idóneas para el mejor rendimiento de los procesos, evitan caídas indeseables de la
+                                    temperatura, favorecen el aprovechamiento y el ahorro energético y proporcionan
+                                    protección al personal operativo.</p>
+                                <p class="p-b-30">La temperatura o el intervalo de temperaturas que se manejan en cada caso, así como
+                                    la finalidad específica de cada aislamiento son determinantes tanto de la selección de
+                                    materiales a utilizar y su protección como por supuesto del sistema de montaje a utilizar.
+                                    ADISA dispone de la tecnología necesaria y de los sistemas para aislar prácticamente
+                                    toda la gama de temperaturas: En calor hasta temperaturas próximas a los 1500ºC;
+                                    en frío donde posee la más alta especialización y experiencia de nuestro país, y con un
+                                    conocimiento profundo de los sistemas de montaje hasta temperaturas inferiores a los
+                                    -160ºC
+                                     </p>
                             </div>
                         </div>
                         <div class="col-md-5 col-sm-5 col-xs-12">
@@ -254,17 +253,15 @@
                         </div>
                     </div>
                     <div id="faq" class="faq_box">
-                        <h2>Basic</h2>
+                        <h2>Faq</h2>
                         <!--Accordions-->
                         <ul class="items">
-                            <li><a class="expanded" href="#">What is do i have to tell you a few lorem?</a>
+                            <li><a class="expanded" href="#">¿Qué servicios ofrecen?</a>
                                 <ul style="display:block;" class="sub-items">
 
                                     <li>
-                                        <p>Aliquam ultrices venenatis mauris. Vestibulum ante ipsum primis in industry,
-                                            logistics, finance, business orci ultrices venenatis mauris. Aliquam
-                                            ultrices venenatis mauris ante ipsum Vestibulum ante ipsum primis in
-                                            industry, logistics, finance, business orci Aliquam ultrices.</p>
+                                        <p>Adisa ofrece el Diseño, la Manufactura, Fabricación, Instalación, Compra, Venta, Alquiler, Mantenimiento, Distribución, Importación, Exportación y en general toda clase de productos Aislamiento térmico acústico.
+                                        </p>
                                     </li>
                                 </ul>
                             </li>
@@ -304,29 +301,7 @@
 
                         </ul>
                     </div>
-                    <div class="row p-t-90">
-                        <div class="col-md-4 col-sm-4 col-xs-12">
-                            <div class="feature_box"> <i class="icon-thumb-up"></i>
-                                <h3>Manufacturing</h3>
-                                <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance,
-                                    business orci ultrices venenatis mauris.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-4 col-xs-12">
-                            <div class="feature_box"> <i class="icon-briefcase2"></i>
-                                <h3>Product Delivery</h3>
-                                <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance,
-                                    business orci ultrices venenatis mauris.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-4 col-sm-4 col-xs-12">
-                            <div class="feature_box"> <i class="icon-alarmclock"></i>
-                                <h3>Safe Place for you</h3>
-                                <p>Benenatis mauris. Vestibulum ante ipsum primis in industry, logistics, finance,
-                                    business orci ultrices venenatis mauris.</p>
-                            </div>
-                        </div>
-                    </div>
+                   
                 </div>
             </div>
         </div>
