--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootsnav.css" />
 
     <!-- Custom Css -->
-    <link rel="stylesheet" type="text/css" href="css/color-orange.css" />
+    <link rel="stylesheet" type="text/css" href="css/color-blue.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!--Favicon-->
@@ -113,7 +113,6 @@
 
         <!-- Navbar Start -->
         <nav class="navbar navbar-default navbar-fixed navbar-transparent navbar-sticky dark bootsnav">
-
             <div class="container">
                 <div class="" id="search">
                     <button type="button" class="close">×</button>
@@ -274,6 +273,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!--
                                 <div class="item">
                                     <div class="agent-p-contact">
                                         <h3 class="color_white">Moldove</h3>
@@ -297,7 +297,7 @@
                                             <p>124BP Australia</p>
                                         </div>
                                     </div>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
