--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootsnav.css" />
 
     <!-- Custom Css -->
-    <link rel="stylesheet" type="text/css" href="css/color-orange.css" />
+    <link rel="stylesheet" type="text/css" href="css/color-blue.css" /> <!--Change color here-->
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!--Favicon-->
@@ -348,7 +348,7 @@
 
     <!-- BG + Text _3 Start -->
     <section id="bg_text" style="background:url(images/bg_1.jpg) no-repeat fixed">
-        <div class="container">
+        <div class="container rounded opacitys">
             <div class="row">
                 <div class="col-md-12">
                     <h2>Más de <span class="color_red">20 años</span> de experiencia en la industria.</h2>
