--- a/products-services.html
+++ b/products-services.html
@@ -32,7 +32,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootsnav.css" />
 
     <!-- Custom Css -->
-    <link rel="stylesheet" type="text/css" href="css/color-orange.css" />
+    <link rel="stylesheet" type="text/css" href="css/color-blue.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
@@ -184,9 +184,9 @@
                             <br>Las Alamedas, Ciudad López Mateos, Méx</p>
                     </div>
                     <div class="brochure">
-                        <h3>Catálogo</h3>
-                        <p>Descarga nuestro catálogo 2019 con nuestros últimos productos y servicios.</p>
-                        <a href="#"><i class="icon-document-file-gif"></i> Descargar</a>
+                        <h3>Presentación</h3>
+                        <p>Descarga nuestra presentación con nuestros últimos productos y servicios.</p>
+                        <a href="/downloads/Presentación Adisa.pdf" download><i class="icon-document-file-gif"></i> Descargar</a>
                     </div>
                 </div>
                 <div class="col-md-9 col-sm-9 col-xs-12">
