--- a/about_us.html
+++ b/about_us.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootsnav.css" />
 
     <!-- Custom Css -->
-    <link rel="stylesheet" type="text/css" href="css/color-orange.css" />
+    <link rel="stylesheet" type="text/css" href="css/color-blue.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!--Favicon-->
@@ -180,14 +180,12 @@
                             <p>Confianza y Seguridad.</p>
                             <h2>Descripción <span class="color_red">de la empresa</span></h2>
                         </div>
-                        <p class="p-t-30 p-b-40 p_17">Somos una empresa 100% mexicana, dedicada a la investigación, desarrollo y uso de nuevas tecnologías con el fin de crear soluciones en el campo del aislamiento térmico y acústico  para la industria.</p>
+                        <p class="p-t-30 p-b-40 p_17">Somos una empresa 100% mexicana en la que brindamos soluciones a nuestros clientes, que generan ahorros de energía en sus procesos productivos, abonamos a su competitividad a nivel nacional e internacional por medio de asesorías, diseño, suministro e instalación de aislantes térmicos y acústicos con materiales de la más alta calidad capaces de soportar condiciones de uso extremo.</p>
                         <p class="p-b-50 p_17">Contamos con más de 20 años de experiencia ofreciendo los mejores aislantes térmicos y acústicos de la mejor calidad, con marcas de renombre que respaldan nuestros productos y servicios.</p>
-                        <p class="p_17">Vestibulum industry, logistics, finance, business, power Aliquam ultrices
-                            venenatis mauris. industry, logistics, finance, business, consectetur.</p>
+                      
                     </div>
                     <div class="text_ita">
-                        <p>Copious is WP Aliquam ultrices venenatis mauris. Vestibulum ante ipsum primis in that
-                            faucibus orci luctus et.</p>
+                        <p>En Adisa la <b>honestidad</b> es nuestro pilar más importante, nos <b>apasiona</b> lo que hacemos ya que nos gusta construbuir para mejorar los procesos de nuestros clientes, la <b>innovación</b> es un distintivo nuestro ya que siempre buscamos brindar soluciones únicas a los desafíos que nuestros clientes nos confían bajo el sello de la <b>excelencia</b> al cuidar cada detalle y buscar la mejora continua en nuestros procesos.</p>
                     </div>
                 </div>
                 <div class="col-md-5 col-sm-5 col-xs-12">
@@ -452,7 +450,7 @@
 
                 <div class="col-md-1 col-sm-2 col-xs-12">
                     <div class="company_year">
-                        <h2 class="color_red">Falta</h2>
+                        <h2 class="color_red">Ahora</h2>
                     </div>
                 </div>
 
@@ -464,8 +462,8 @@
 
                 <div class="col-md-10 col-sm-8 col-xs-12">
                     <div class="company_text">
-                        <h3>Falta</h3>
-                        <p>Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,Falta,.</p>
+                        <h3>Actualmente</h3>
+                        <p>Adisa sigue trabajando para ofrecer los aislamiento de mayor calidad y última tecnología al mercado.</p>
                     </div>
                 </div>
 
