--- a/about_us.html
+++ b/about_us.html
@@ -102,7 +102,7 @@
                         <div class="header-top-links">
                             <div class="social-icons text-right">
                                 <ul>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
@@ -292,7 +292,7 @@
                                 <p>Head of Innovation</p>
                             </div>
                             <ul>
-                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138"  target="_blank"><span class="fa fa-facebook"></span></a></li>
                                 <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                 <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
@@ -314,7 +314,7 @@
                                 <p>Head of Innovation</p>
                             </div>
                             <ul>
-                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138"  target="_blank"><span class="fa fa-facebook"></span></a></li>
                                 <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                 <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
@@ -336,7 +336,7 @@
                                 <p>Head of Innovation</p>
                             </div>
                             <ul>
-                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138"  target="_blank"><span class="fa fa-facebook"></span></a></li>
                                 <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                 <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
@@ -358,7 +358,7 @@
                                 <p>Head of Innovation</p>
                             </div>
                             <ul>
-                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><span class="fa fa-"></span></a></li>
                                 <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                 <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
@@ -380,7 +380,7 @@
                                 <p>Head of Innovation</p>
                             </div>
                             <ul>
-                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="https://www..com/Adisa-820784381636138"><span class="fa fa-"></span></a></li>
                                 <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                 <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
@@ -402,7 +402,7 @@
                                 <p>Head of Innovation</p>
                             </div>
                             <ul>
-                                <li><a href="#"><span class="fa fa-facebook"></span></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138"  target="_blank"><span class="fa fa-facebook"></span></a></li>
                                 <li><a href="#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                                 <li><a href="#"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
@@ -557,7 +557,7 @@
                             aislamiento térmico y acústico para la industria.</p>
                         <div class="social-icons_1">
                             <ul>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                             </ul>
 
@@ -669,7 +669,7 @@
                             </div>
                             <div class="social-icons">
                                 <ul>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-google-plus"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
