--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="header-top-links">
                             <div class="social-icons text-right">
                                 <ul>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
@@ -468,7 +468,7 @@
                             aislamiento térmico y acústico para la industria.</p>
                         <div class="social-icons_1">
                             <ul>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                             </ul>
 
@@ -579,7 +579,7 @@
                             </div>
                             <div class="social-icons">
                                 <ul>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
