--- a/products-services.html
+++ b/products-services.html
@@ -99,7 +99,7 @@
                         <div class="header-top-links">
                             <div class="social-icons text-right">
                                 <ul>
-                                    <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
@@ -320,7 +320,7 @@
                             aislamiento térmico y acústico para la industria.</p>
                         <div class="social-icons_1">
                             <ul>
-                                <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/Adisa-820784381636138" target="_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
                             </ul>
 
